...
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="connect_to_network_message">Unable to connect to network</string>
    <string name="go_to_settings_message">Go to settings</string>
    <string name="enable_wifi_in_settings_message">Please connect to a network to use this feature.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="error_playing_song_message">There was a problem playing this song.</string>
    <string name="forgot_password">Forgot Password ?</string>
...
