<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brainbeats.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/app_image"
            android:layout_width="3000dp"
            android:layout_height="120dp"
            android:contentDescription="@string/content_description_image_placeholder"
            android:src="@drawable/logo_white_background" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">

            <AutoCompleteTextView
                android:id="@+id/email_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/login_text_size"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/theme_secondary_text_color" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp">

            <EditText
                android:id="@+id/password_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textSize="@dimen/login_text_size"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/theme_secondary_text_color" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button_background"
            android:text="@string/action_sign_in"
            android:textColor="@color/theme_primary_text_color"
            android:textStyle="bold" />

<!--        <Button
            android:id="@+id/sound_cloud_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button_background"
            android:text="@string/log_in_using_sound_cloud"
            android:textColor="@color/theme_primary_text_color"
            android:textStyle="bold" />-->

    </LinearLayout>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_login_form"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/theme_secondary_text_color"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/theme_secondary_text_color"
        android:textSize="16sp" />

</RelativeLayout>
